--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -101,7 +101,7 @@
         <li><a href="https://vine.co/u/{{ author.vine }}"><i class="fa fa-fw fa-vine" aria-hidden="true"></i> Vine</a></li>
       {% endif %}
       {% if author.cv %}
-        <li><a href="{{ author.cv }}"><i class="fas fa-fw fa-file"></i> Curriculum Vitae</a></li>
+        <li><a href="{{ author.cv }}"><i class="fa fa-fw fa-file"></i> Curriculum Vitae</a></li>
       {% endif %}
       {% if author.googlescholar %}
         <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar-square ai-fw"></i> Google Scholar</a></li>
